--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "laravel/framework": "5.2.*",
         "illuminate/html": "~5.0",
 	    "acacha/admin-lte-template-laravel": "2.*",
-        "maatwebsite/excel": "~2.0"
+        "anhskohbo/no-captcha":"2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
